# postgres_playing

./: alembic.ini  bases.py  create_data.py  docker-compose.yaml  pyproject.toml  run.py
api/: base.py  methods.py
apps/appliances/: models.py
apps/events/: models.py
apps/locations/: models.py
migrations/: env.py
migrations/versions/: 268c76072d93_device_and_d_mapping_models.py  a19a07997af9_initial.py  f57ae41b3a59_initial.py
settings/: local_settings.py
tests/: base.py  data.py  factories.py
