[tool.poetry]
name = "study"
version = "0.1.0"
description = ""
authors = ["yeromenko <mikhail.yeromenko@vilmate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
